<resources>
    <string name="hello">Hello World, MahanagarGasLimitedNew!</string>
    <string name="app_name">msales</string>
    <string name="title_home">Home</string>
    <string name="title_home_menu">HomeMenu</string>
    <string name="title_feature1">My BookWalk</string>
    <string name="title_feature2">Update Customers</string>
    <string name="title_feature3">Saved</string>
    <string name="title_feature4">Reports</string>
    <string name="title_feature5">Download BookWalk Sequence</string>
    <string name="title_feature6">Random Meter Reading</string>
    <string name="meterreading_feature1">Unattempted Meter Readings [2]</string>
    <string name="meterreading_feature2">Meter Reading Taken [123]</string>
    <string name="meterreading_feature3">Unable to take Meter Readings [5]</string>
    <string name="unattempted_feature1">Take Meter Reading</string>
    <string name="unattempted_feature2">Fail to take Meter Readings</string>
    <string name="reports_menu1">Customers Assigned [500]</string>
    <string name="reports_menu2">Customer Visited [450]</string>
    <string name="reports_menu3">Meter Reading Taken [420]</string>
    <string name="reports_menu4">Customer was Closed [20]</string>
    <string name="reports_menu5">Unable to take Reading [30]</string>
    <string name="reports_menu6">Fail to take Meter Reading [5]</string>
    <string name="btnIntendS">Take Picture</string>
    <string name="btnCropImage">Crop Picture</string>
    <string name="randomno">Kindly enter the following code to \n confirm the Auto Trigger operation</string>
    <string name="cannot">Cannot</string>
    <string name="meter_tampered_remark">Please enter the Meter Index Tampered Remark</string>
    <string name="meter_protection_remark">Please enter the Meter Protection Seal Remark</string>
    <string name="meter_bypass_remark">Please enter the Meter Bypass Arrangement Remark</string>
    <string name="meter_input_seal_no">Please enter the Input Seal Number</string>
    <string name="key_field_flat">flat</string>
    <string name="key_field_floor">floor</string>
    <string name="key_field_plot">plot</string>
    <string name="key_field_buildingname">buildName</string>
    <string name="key_field_wing">wing</string>
    <string name="key_field_remark">remark</string>
    <string name="key_field_messToMR">msgToMr</string>
    <string name="isdoorlockedpopup">isdoorlockedpopup</string>
    <string name="correct">Corrected Value</string>
    <string name="uncorrect">UnCorrected Value</string>
    <string name="turbineMtrReading">Turbine Meter Reading Value</string>
    <string name="pressure">Pressure Value</string>
    <string name="temperature">Temperature Value</string>
    <string name="correctionfactor">Correction Factor Value</string>
    <string name="remarks">Remarks Value</string>
    <string name="mrs">MRS Image</string>
    <string name="turbineimage">Turbine Image</string>
    <string name="turbineseal">Turbine Seal Image</string>
    <string name="firstevc">First EVC Image</string>
    <string name="secondevc">Second EVC Image</string>
    <string name="evcseal">EVC Seal Image</string>
    <string name="mrslocked">MRS Locked Image</string>
    <string name="meterreading">Take Meter Reading</string>
    <string name="updatecust">Update Customer</string>
    <string name="jointicketing">Join Ticketing</string>
    <string-array name="docList">
        <item name="SelectDocType">Select Document Type</item>
        <item name="ElectricityBil">Electricity Bill</item>
        <item name="FlatAgreement">Flat Agreement</item>
        <item name="ShareCertificate">Share Certificate</item>
        <item name="MtnlTelephoneBill">MTNL Telephone Bill</item>
        <item name="AadharCard">Aadhar Card</item>
        <item name="VoterId">Voter ID</item>
        <item name="Other">Other</item>
    </string-array>
    <string name="title_activity_document_image">DocumentImageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_update_customer_final_summary">UpdateCustomerFinalSummaryActivity</string>
    <string name="no_burners">No.of Burners :</string>
    <string name="no_geysers">No.of Gas Geysers :</string>
    <string name="gas_hose">MGL Gas Hose Available</string>
    <string name="message">Message from meter reader :</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="takephoto">Take Photo</string>
    <string name="bpnumber">BP Number :</string>
    <string name="code">Mro Number :</string>
    <string name="message1">Message from meter reader:</string>
    <string name="remark">Remarks :</string>
    <string name="date">Date and Time of visit :</string>
    <string name="photo1">Image 1:</string>
    <string name="photo2">Image 2:</string>
    <string name="burner">No of Burner</string>
    <string name="geyser">No of Gas Geyser :</string>
    <string name="name"> Readers name and Agency name :</string>
    <string name="title_activity_take_photo">TakePhoto</string>
    <string name="group">Group :</string>
    <string name="finalattempt">Final Attempt</string>
    <string name="readermsg">Message from Meter Reader :</string>
    <string name="submit">Submit</string>
    <string name="onmPlanning">OnM Planning</string>
    <string name="otherInfo">Other Information</string>
    <string name="Using_LPG_MGL_gas_hose_not_available">एलपीजी का उपयोग किया जा रहा है, एमजीएल गैस नली उपलब्ध नहीं है</string>
    <string name="Not_using_LPG_MGL_gas_hose_also_not_available">एलपीजी का उपयोग नहीं किया जा रहा है, एमजीएल गैस नली उपलब्ध नहीं है</string>
    <string name="address_not_found_hindi">पता नहीं मिला</string>
    <string name="building_demolished_hindi">बिल्डिंग तोड़ी जा चुकी है/ तोड़ी जा रही है</string>
    <string name="building_under_construction_hindi">बिल्डिंग निर्माणाधीन/ रीडेवलप की जाने वाली है</string>
    <string name="permission_not_obtained_hindi">अनुमति नहीं मिली</string>
    <string name="premises_locked_hindi">ताला लगा है</string>
    <string name="reached_png_installation_but_reading_or_photo_not_possible_hindi">पीएनजी इंस्टॉलेशन तक पहुंचकर रीडिंग/फ़ोटो सम्भव नहीं</string>
    <string name="meter_reading_possible_hindi">मीटर रीडिंग लेना सम्भव</string>
    <string name="letter_to_customer_hindi">कस्टमर को लेटर दिया</string>
    <string name="permission_refused_by_security_hindi">सिक्योरिटी ने अनुमति नहीं दी</string>
    <string name="permission_refused_by_secretary_hindi">सेक्रेटरी ने अनुमति नहीं दी </string>
    <string name="permission_refused_by_customer_hindi">कस्टमर ने अनुमति नहीं दी</string>
    <string name="no_png_connection_hindi">पीएनजी कनेक्शन नहीं है</string>
    <string name="meter_fitted_at_awkward_place_or_level_hindi">मीटर रीडिंग के लिए असुविधाजनक स्थान पर लगा है</string>
    <string name="meter_inaccessible_hindi">मीटर तक पहुंचना सम्भव नहीं</string>
    <string name="meter_glass_smoky_or_opaque_hindi">मीटर का कांच धुन्धला है</string>
    <string name="meter_rusty_or_damaged_hindi">मीटर जंगयुक्त/ क्षतिग्रस्त है</string>
    <string name="harmed_by_consumer_hindi">कस्टमर द्वारा मीटर क्षतिग्रस्त</string>
    <string name="meter_disconnected_hindi">मीटर डिस्कनेक्ट किया गया है</string>
    <string name="room_under_repair_or_renovation_hindi">मरम्मत/ नवीकरण कार्य जारी</string>
    <string name="meter_normal_hindi">मीटर रीडिंग लेना सम्भव</string>
    <string name="using_for_commercial_purpose">पीएनजी का कमर्शियल उद्देश्य के लिए इस्तेमाल </string>
    <string name="temporary_disconnection_hindi">अस्थायी डिस्कनेक्शन </string>
    <string name="meter_or_counter_defective_hindi">मीटर/ काउंटर खराब है</string>
    <string name="not_using_gas_hindi">पीएनजी का उपयोग नहीं किया जा रहा है </string>
    <string name="letter_given_for_visit_once_per_year_hindi">साल मे एक बार रीडिंग लेने का लेटर दिया </string>
    <string name="Meter_testing_not_possible">मीटर परीक्षण संभव नहीं</string>
    <string name="building_and_wing_correct_but_customer_not_found_here_hindi">बिल्डिंग/विंग का पता सही लेकिन यहां कस्टमर नहीं मिला </string>
    <string name="building_or_wing_not_available_on_given_address_hindi">दिए गए पते पर बिल्डिंग/विंग नहीं मिली</string>
    <string name="building_redeveloped_with_new_name_presently_no_png_connection_hindi">दिए गए पते पर नए नाम की नई बिल्डिंग। अभी एक भी कनेक्शन नहीं है</string>
    <string name="building_redeveloped_with_new_name_and_new_connections_hindi">दिए गए पते पर नए नाम की नई बिल्डिंग और नए  कनेक्शन हैं</string>
    <string name="other_hindi">अन्य कारण (लिखें)</string>
    <string name="no_hindi_text">""</string>
    <string name="demolition_in_progress_hindi">बिल्डिंग तोड़ी जा रही है</string>
    <string name="confirmed_with_security_hindi">बिल्डिंग में कोई नहीं रहता। सिक्योरिटी से पुष्टि की </string>
    <string name="confirmed_with_secretary_or_bp_by_calling_hindi">बिल्डिंग में कोई नहीं रहता। सेक्रेटरी/ कस्टमर से फोन पर पुष्टि की</string>
    <string name="building_abandoned_confirmed_with_security_hindi">बिल्डिंग में कोई नहीं रहता। सिक्योरिटी से पुष्टि की</string>
    <string name="building_abandoned_confirmed_with_secretary_bp_by_calling_hindi">बिल्डिंग में कोई नहीं रहता। सेक्रेटरी/ कस्टमर से फोन पर पुष्टि की</string>
    <string name="building_abandoned_nobody_available_for_confirmation_hindi">बिल्डिंग में कोई नहीं रहता। पुष्टि के लिए कोई नहीं मिला।</string>
    <string name="this_bp_has_abandoned_for_redevelopment_few_others_are_living_hindi">यह कस्टमर रीडेवलपमेंट के लिए बिल्डिंग छोड़ चुका है। कुछ अन्य अभी मौज़ूद हैं</string>
    <string name="meter_reader_visited_this_month_only_hindi">मीटर रीडर/ एमजीएल प्रतिनिधि इसी महीने आया था</string>
    <string name="address_correct_building_under_construction">पता सही है, बिल्डिंग का निर्माण जारी है</string>
    <string name="not_right_time_to_visit_hindi">यह सही समय नहीं है</string>
    <string name="refused_due_to_security_concern_hindi">सुरक्षा कारणों से मना किया</string>
    <string name="privacy_reason_hindi">कस्टमर ने निजी कारण से मना किया</string>
    <string name="mgl_should_send_letter_sms">एमजीएल लेटर/ एसएमएस भेजे </string>
    <string name="mgl_should_give_letter_before_reading">एमजीएल मीटर रीडिंग से पहले लेटर/एसएमएस भेजे </string>
    <string name="no_png_connection">पीएनजी कनेक्शन नहीं है</string>
    <string name="no_meter_or_meter_lost">मीटर नहीं है/ मीटर गुम हो गया है </string>
    <string name="repair_renovation_done_inside">अन्दर रिपेअर/ रिनोवेशन का काम चल रहा है </string>
    <string name="no_bp_by_name_shown">बताये गये नाम से यहां कोई नहीं रहता/ रहते हैं</string>
    <string name="png_connection_not_taken">पीएनजी कनेक्शन नहीं लिया है </string>
    <string name="png_permanently_disconnected">पीएनजी का परमनेंट डिस्कनेक्शन हो चुका है </string>
    <string name="temporary_disconnection_by_mgl">एमजीएल ने टेम्पररी डिस्कनेक्शन किया है</string>
    <string name="not_using_png">पीएनजी का उपयोग नहीं करते हैं </string>
    <string name="informed_mgl_minimum_bill">मिनिमम चार्ज बिल के लिए एमजीएल को बता रखा है </string>
    <string name="mgl_has_disconnected_from_outside">एमजीएल ने बाहर से डिस्कनेक्ट किया है </string>
    <string name="complaint_given_mgl_no_action">एमजीएल को कम्प्लेंट दी है लेकिन कोई कार्यवाही नहीं हुई है</string>
    <string name="falt_combined_and_this_connection_removed">फ्लैट्स जोड़ लिए हैं और ये कनेक्शन हटा दिया है </string>
    <string name="falt_combined_and_this_meter_removed_and_not_available">फ्लैट्स जोड़ लिए हैं, ये मीटर हटा दिया है और उपलब्ध नहीं  </string>
    <string name="id_card_details_insufficient">आइडी कार्ड में आवश्यक जानकारी नहीं है </string>
    <string name="update">Update</string>
    <string name="oldMeterUpdate">Old Meter Number</string>
    <string name="newMeterUpdate">New Meter Number</string>
</resources>