<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ll_headerLayout"
        style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/title_home"
            android:onClick="goHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:text="Meter Update" />

       <ImageView style="@style/TitleBarSeparator" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/title_home"
            android:src="@drawable/mahanagarlogosmall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/splashImageViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_headerLayout"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/SplashImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/msales" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_old_meter_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splashImageViewLayout"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:id="@+id/tv1_old_meter_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/oldMeterUpdate"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv2_old_meter_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_new_meter_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_old_meter_update"
        android:layout_marginTop="5dip"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:id="@+id/tv1_new_meter_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newMeterUpdate"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_new_meter_update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:maxLength="50" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_remarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_new_meter_update"
        android:layout_marginTop="5dip"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:id="@+id/tv_remarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_remarks"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dip"
            android:maxLength="50" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dip"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:background="#333333"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.5"
            android:background="#bc3751"
            android:text="@string/update"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>